# FloorplanGen

./: CMakeLists.txt  Readme  lines.cpp  orb_rgbd.cpp  planes.cpp  runAll.sh
Utilities/: filter_depthfiles.m  filter_depthfiles.m~  generate_pointcloud.py  generate_registered_pointcloud.py  getStrips.py  min_bounding_rect.py  quat2rotm.py
python/: Untitled.ipynb  assocToIndiLists.py  associate_ours.py  gaussian.py  getStrips.py  getStripsGen.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
